--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -4,4 +4,11 @@
   align-items: center;
   background-color: #0267a3;
   padding: 10px;
+
+  &__logo{
+    color: #fff;
+    font-size: 2rem;
+    margin: 0;
+
+  }
 }
