--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -6,6 +6,8 @@ body {
   padding: 0;
   background-color: #0078bf;
   font-family: Helvetica Neue,Arial,Helvetica,sans-serif; }
+  body .smooth-dnd-container.horizontal {
+    white-space: normal !important; }
   body p {
     color: #fff; }
 
@@ -15,15 +17,21 @@ body {
   align-items: center;
   background-color: #0267a3;
   padding: 10px; }
+  .header__logo {
+    color: #fff;
+    font-size: 2rem;
+    margin: 0; }
 
 .dashboard {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  min-height: calc(100vh - 115px); }
   .dashboard__addList {
     transition: background-color .3s ease;
     background-color: #026aa8;
+    display: inline-block;
     border-radius: 3px;
     box-sizing: border-box;
     width: 250px;
@@ -97,7 +105,8 @@ body {
   box-sizing: border-box;
   width: 250px;
   margin: 10px;
-  padding: 15px; }
+  padding: 15px;
+  cursor: move; }
   .list__list-title {
     display: flex;
     justify-content: space-between;
@@ -304,5 +313,20 @@ body {
 
 .react-datepicker-popper {
   transform: scale(1.3) translate3d(30px, 230px, 0px) !important; }
+
+.footer {
+  background-color: #585858;
+  text-align: center;
+  padding: 10px 0; }
+  .footer__text {
+    margin: 0;
+    padding: 5px;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 300; }
+    .footer__text a {
+      color: #fff;
+      font-weight: 500;
+      text-decoration: underline; }
 
 /*# sourceMappingURL=index.css.map */
