--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -7,6 +7,10 @@ body{
   background-color: #0078bf;
   font-family: Helvetica Neue,Arial,Helvetica,sans-serif;
 
+  .smooth-dnd-container.horizontal{
+    white-space: normal !important;
+  }
+
   p{
     color: #fff;
   }
